samples/_failures_safe/1761597354_5a04fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab3664a8.c: In function ‘main’:
./samples/SAFE/__tmp_ab3664a8.c:142:5: error: expected expression at end of input
  142 |     size_t decompressed_size = decompress_rle(compressed, compressed_size,
      |     ^~~~~~
./samples/SAFE/__tmp_ab3664a8.c:142:32: error: too few arguments to function ‘decompress_rle’
  142 |     size_t decompressed_size = decompress_rle(compressed, compressed_size,
      |                                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ab3664a8.c:89:8: note: declared here
   89 | size_t decompress_rle(const uint8_t *input, size_t input_len, uint8_t *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ab3664a8.c:142:5: error: expected declaration or statement at end of input
  142 |     size_t decompressed_size = decompress_rle(compressed, compressed_size,
      |     ^~~~~~
